SERVER-40322 Prevent unnecessary prepare conflicts when writing out rollback files